alignment solved, made the results into a partial, now we need to finish stylize it

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -81,7 +81,7 @@ body {
   font-family: 'Cinzel', serif;
   color: white;
   text-align: center;
-  -webkit-perspective: 1100px;
+  -webkit-perspective: 1000px;
 }
 
 h1 {
